@@ -1,4 +1,13 @@
+2009-01-01  Karl Berry  <karl@gnu.org>
+
+	* util/gendocs.sh: accept --email option, replace %%EMAIL%% in
+		templates.
+	* util/gendocs_template,
+	* util/gendocs_template_min: use %%EMAIL%%.
+	Update all for 2009.
+
 2008-12-31  Oleg Katsitadze  <olegkat@gmail.com>
+
 	* doc/texinfo.tex (@raggedright, @raggedleft, @raggedcenter):  New
 	commands.
 	* makeinfo/cmds.c, makeinfo/cmds.h, makeinfo/insertion.c:
@@ -8536,7 +8545,8 @@
 	* version 4.6.
 
 
-Copyright 2003, 2004, 2005, 2006, 2007, 2008 Free Software Foundation, Inc.
+Copyright 2003, 2004, 2005, 2006, 2007, 2008, 2009
+Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
